samples/_failures_safe/1761433074_3984c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13967b67.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser_advance
      | ^~~~
